# calendarlight

./: .gitignore  README.md  pyproject.toml
calendarlight/: __init__.py  __main__.py
calendarlight/config/: credentials.json  manager.py
calendarlight/google/: calendar.py
calendarlight/runner/: runner.py
calendarlight/service/: calendarlight.template.plist  mac.py
